sync: capture-phase shortcuts, tooltip touch guards, sidebar scrollbar fix

--- a/src/styles/components/_page-sidebar.scss
+++ b/src/styles/components/_page-sidebar.scss
@@ -152,6 +152,11 @@ $sidebar-width: 15rem; // void-ignore (Sidebar Width) 240px
 
     // Flat: solid thumb, subtle track
     @include when-flat {
+      scrollbar-color: transparent transparent;
+
+      &::-webkit-scrollbar-thumb {
+        background: transparent;
+      }
       &:hover {
         scrollbar-color: var(--energy-secondary) var(--bg-sunk);
 
@@ -176,13 +181,20 @@ $sidebar-width: 15rem; // void-ignore (Sidebar Width) 240px
     @include when-retro {
       scrollbar-width: auto;
 
+      scrollbar-color: transparent transparent;
+
       &::-webkit-scrollbar {
         width: calc(var(--scrollbar-width) * 2);
         height: calc(var(--scrollbar-width) * 2);
       }
 
       &::-webkit-scrollbar-thumb {
+        background: transparent;
         transition: none;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: transparent;
       }
 
       &:hover {
